# jet_ec_assignment

./: .gitignore  README.md  justfile  main.py  pyproject.toml  requirements.txt  to_do.txt  tox.ini  zensical.toml
.github/workflows/: ci.yaml  gen_models.yaml  modelgen.yaml  release.yaml
apps/example_app/: .dockerignore  Dockerfile  pyproject.toml
apps/example_app/src/example_app/: example_app.py  main.py
docs/: assignment.txt  assumptions.txt
docs/site/: 404.html  objects.inv  search.json
docs/site/apps/: example_app.html
docs/site/libs/: jet_api.html
docs/zensical/apps/: example_app.md
docs/zensical/libs/: jet_api.md
libs/jet_api/: .env  pyproject.toml
libs/jet_api/api/examples/: example_jet_restuarants_data.json
libs/jet_api/scripts/: build_models.py  fetch_jet_restuarant_data.py
libs/jet_api/src/jet_api/: __init__.py  client.py  config.py  config_validation.py  exceptions.py  models.py  pydantic_streamer.py
libs/jet_api/src/jet_api/resources/: openapi.yaml
libs/jet_api/tests/unit/: models_test.py
site/: index.html
site/libs/: jet_api.html
