[project]
name = "jet_api"
dynamic = ["version"]
description = "JET EC coding assignment JET API library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"  # Tells hatchling to look at Git/VCS
raw-options = { root = "../..", version_scheme = "post-release" }
